--- a/ui/cli/dataloader/src/metadata/log4j.properties
+++ b/ui/cli/dataloader/src/metadata/log4j.properties
@@ -3,4 +3,4 @@ log4j.rootLogger=INFO, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%-5p] %m%n
+log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%-5p] %C{1}: %m%n
