--- a/.gitlab/ci/gitlab-ci.yml
+++ b/.gitlab/ci/gitlab-ci.yml
@@ -24,6 +24,7 @@ build:
       - build/service/graphql/war/graphql.war
       - build/service/job/jar/echothree-job.jar
       - build/ui/cli/database/jar/database.jar
+      - build/ui/cli/dataloader/jar/dataloader.jar
       - build/lib/mysql-connector-java.jar
       - build/lib/guava.jar
       - build/lib/commons-cli.jar
