--- a/ui/cli/dataloader/build.xml
+++ b/ui/cli/dataloader/build.xml
@@ -134,7 +134,7 @@
               classname="com.echothree.ui.cli.dataloader.DataLoader"
               fork="true">
             <arg value="--file"/>
-            <arg value="src/xml/LoadKeys.xml"/>
+            <arg value="/LoadKeys.xml"/>
         </java>
     </target>
     
@@ -143,7 +143,7 @@
               classname="com.echothree.ui.cli.dataloader.DataLoader"
               fork="true">
             <arg value="--file"/>
-            <arg value="src/xml/ChangeKeys.xml"/>
+            <arg value="/ChangeKeys.xml"/>
         </java>
     </target>
     
