--- a/ui/cli/mailtransfer/build.xml
+++ b/ui/cli/mailtransfer/build.xml
@@ -63,7 +63,7 @@
     </target>
     
     <target depends="compile" name="BlogEntries">
-        <java classname="com.echothree.ui.cli.mailtransfer.MailTransferUtility" fork="true">
+        <java classname="com.echothree.ui.cli.mailtransfer.MailTransfer" fork="true">
             <arg value="--blogentries"/>
             <arg value="--verbose"/>
             <classpath>
@@ -86,7 +86,7 @@
     </target>
 
     <target depends="compile" name="CommunicationEvents">
-        <java classname="com.echothree.ui.cli.mailtransfer.MailTransferUtility" fork="true">
+        <java classname="com.echothree.ui.cli.mailtransfer.MailTransfer" fork="true">
             <arg value="--communicationevents"/>
             <arg value="--verbose"/>
             <classpath>
