--- a/.gitlab/ci/gitlab-ci.yml
+++ b/.gitlab/ci/gitlab-ci.yml
@@ -25,6 +25,7 @@ build:
       - build/service/job/jar/echothree-job.jar
       - build/ui/cli/database/jar/database.jar
       - build/ui/cli/dataloader/jar/dataloader.jar
+      - build/ui/cli/mailtransfer/jar/mailtransfer.jar
       - build/lib/mysql-connector-java.jar
       - build/lib/guava.jar
       - build/lib/commons-cli.jar
