#305: Added the SentEventEventBus and hooked it into sendEvent(...)

--- a/src/build.xml
+++ b/src/build.xml
@@ -289,6 +289,7 @@
             </fileset>
             <fileset dir="${dir.home}/build/lib">
                 <include name="antlr4-runtime.jar" />
+                <include name="classgraph.jar" />
                 <include name="commons-codec.jar" />
                 <include name="graphql-java.jar" />
                 <include name="graphql-java-annotations.jar" />
