--- a/ivy.xml
+++ b/ivy.xml
@@ -34,6 +34,7 @@
         <dependency org="io.cucumber" name="cucumber-junit" rev="6.10.0" conf="sources->sources" />
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.108" conf="sources->sources" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="8.5" conf="sources->sources" />
+        <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.M2" conf="sources->sources" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="sources->sources" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="sources->sources" />
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="sources->sources" />
@@ -74,7 +75,7 @@
         <dependency org="org.javassist" name="javassist" rev="3.22.0-GA" conf="sources->sources" />
         <dependency org="org.jfree" name="jcommon" rev="1.0.24" conf="sources->sources" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.0" conf="sources->sources" />
-        <dependency org="org.jooq" name="jooq" rev="3.14.12" conf="sources->sources" />
+        <dependency org="org.jooq" name="jooq" rev="3.15.2" conf="sources->sources" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="sources->sources" />
         <dependency org="org.reactivestreams" name="reactive-streams" rev="1.0.3" conf="sources->sources" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.30" conf="sources->sources" />
@@ -118,6 +119,7 @@
         <dependency org="io.cucumber" name="cucumber-junit" rev="6.10.0" conf="javadoc->javadoc" />
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.108" conf="javadoc->javadoc" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="8.5" conf="javadoc->javadoc" />
+        <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.M2" conf="javadoc->javadoc" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="javadoc->javadoc" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="javadoc->javadoc" />
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="javadoc->javadoc" />
@@ -157,7 +159,7 @@
         <dependency org="org.javassist" name="javassist" rev="3.22.0-GA" conf="javadoc->javadoc" />
         <dependency org="org.jfree" name="jcommon" rev="1.0.24" conf="javadoc->javadoc" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.0" conf="javadoc->javadoc" />
-        <dependency org="org.jooq" name="jooq" rev="3.14.12" conf="javadoc->javadoc" />
+        <dependency org="org.jooq" name="jooq" rev="3.15.2" conf="javadoc->javadoc" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="javadoc->javadoc" />
         <dependency org="org.reactivestreams" name="reactive-streams" rev="1.0.3" conf="javadoc->javadoc" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.30" conf="javadoc->javadoc" />
@@ -203,6 +205,7 @@
         <dependency org="io.cucumber" name="cucumber-junit" rev="6.10.0" conf="binaries->default" />
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.108" conf="binaries->default" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="8.5" conf="binaries->default" />
+        <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.M2" conf="binaries->default" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="binaries->default" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="binaries->default" />
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="binaries->default" />
@@ -249,7 +252,7 @@
         <dependency org="org.javassist" name="javassist" rev="3.22.0-GA" conf="binaries->default" />
         <dependency org="org.jfree" name="jcommon" rev="1.0.24" conf="binaries->default" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.0" conf="binaries->default" />
-        <dependency org="org.jooq" name="jooq" rev="3.14.12" conf="binaries->default" />
+        <dependency org="org.jooq" name="jooq" rev="3.15.2" conf="binaries->default" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="binaries->default" />
         <dependency org="org.reactivestreams" name="reactive-streams" rev="1.0.3" conf="binaries->default" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.30" conf="binaries->default" />
