--- a/src/build.xml
+++ b/src/build.xml
@@ -185,6 +185,7 @@
             <pathelement location="${dir.build.lib}/threeten-extra.jar"/>
         </path>
         <javac
+            fork="true"
             debug="on"
             srcdir="${dir.home}/generated/data/java:${dir.home}/generated/form/java:java"
             destdir="${dir.home}/build/classes"
@@ -195,7 +196,20 @@
             <compilerarg line="-XDcompilePolicy=simple"/>
             <compilerarg value="-processorpath"/>
             <compilerarg pathref="processorpath.ref"/>
+            <!-- Begin Error Prone -->
+            <!-- fork="true" is also required for Error Prone -->
             <compilerarg value="-Xplugin:ErrorProne -Xep:DeadException:ERROR" />
+            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"/>
+            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"/>
+            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"/>
+            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED"/>
+            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"/>
+            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"/>
+            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"/>
+            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"/>
+            <compilerarg value="-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"/>
+            <compilerarg value="-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"/>
+            <!-- End Error Prone -->
             <compilerarg value="-Xlint:-options" />
             <!-- <compilerarg value="-Xlint:deprecation" /> -->
             <!-- <compilerarg value="-Xlint:unchecked" /> -->
@@ -380,7 +394,7 @@ ${javadoc.copyright}
         <pmd
                 shortFilenames="true"
                 noCache="true">
-            <sourceLanguage name="java" version="11" />
+            <sourceLanguage name="java" version="17" />
             <ruleset>rulesets/java/quickstart.xml</ruleset>
             <formatter
                     type="xml"
