--- a/ivy.xml
+++ b/ivy.xml
@@ -11,7 +11,8 @@
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.9.0" conf="sources->sources" />
         <dependency org="com.google.guava" name="failureaccess" rev="1.0" conf="sources->sources" />
         <dependency org="com.google.guava" name="guava" rev="31.0.1-jre" conf="sources->sources" />
-        <dependency org="com.graphql-java" name="graphql-java" rev="16.2" conf="sources->sources" />
+        <dependency org="com.graphql-java" name="graphql-java" rev="17.3" conf="sources->sources" />
+        <dependency org="com.graphql-java" name="graphql-java-extended-scalars" rev="17.0" conf="sources->sources" />
         <dependency org="com.ibm.icu" name="icu4j" rev="69.1" conf="sources->sources" />
         <dependency org="com.lowagie" name="itext" rev="2.0.8" conf="sources->sources" />
         <dependency org="com.rometools" name="rome" rev="1.15.0" conf="sources->sources" />
@@ -33,7 +34,7 @@
         <dependency org="io.cucumber" name="cucumber-java8" rev="7.0.0" conf="sources->sources" />
         <dependency org="io.cucumber" name="cucumber-junit" rev="7.0.0" conf="sources->sources" />
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.115" conf="sources->sources" />
-        <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="8.5" conf="sources->sources" />
+        <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="9.1" conf="sources->sources" />
         <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.M2" conf="sources->sources" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="sources->sources" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="sources->sources" />
@@ -96,7 +97,8 @@
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.9.0" conf="javadoc->javadoc" />
         <dependency org="com.google.guava" name="failureaccess" rev="1.0" conf="javadoc->javadoc" />
         <dependency org="com.google.guava" name="guava" rev="31.0.1-jre" conf="javadoc->javadoc" />
-        <dependency org="com.graphql-java" name="graphql-java" rev="16.2" conf="javadoc->javadoc" />
+        <dependency org="com.graphql-java" name="graphql-java" rev="17.3" conf="javadoc->javadoc" />
+        <dependency org="com.graphql-java" name="graphql-java-extended-scalars" rev="17.0" conf="javadoc->javadoc" />
         <dependency org="com.ibm.icu" name="icu4j" rev="69.1" conf="javadoc->javadoc" />
         <dependency org="com.lowagie" name="itext" rev="2.0.8" conf="javadoc->javadoc" />
         <dependency org="com.rometools" name="rome" rev="1.15.0" conf="javadoc->javadoc" />
@@ -118,7 +120,7 @@
         <dependency org="io.cucumber" name="cucumber-java8" rev="7.0.0" conf="javadoc->javadoc" />
         <dependency org="io.cucumber" name="cucumber-junit" rev="7.0.0" conf="javadoc->javadoc" />
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.115" conf="javadoc->javadoc" />
-        <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="8.5" conf="javadoc->javadoc" />
+        <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="9.1" conf="javadoc->javadoc" />
         <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.M2" conf="javadoc->javadoc" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="javadoc->javadoc" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="javadoc->javadoc" />
@@ -182,7 +184,8 @@
         </dependency>
         <dependency org="com.google.guava" name="failureaccess" rev="1.0" conf="binaries->default" />
         <dependency org="com.google.guava" name="guava" rev="31.0.1-jre" conf="binaries->default" />
-        <dependency org="com.graphql-java" name="graphql-java" rev="16.2" conf="binaries->default" />
+        <dependency org="com.graphql-java" name="graphql-java" rev="17.3" conf="binaries->default" />
+        <dependency org="com.graphql-java" name="graphql-java-extended-scalars" rev="17.0" conf="binaries->default" />
         <dependency org="com.ibm.icu" name="icu4j" rev="69.1" conf="binaries->default" />
         <dependency org="com.lowagie" name="itext" rev="2.0.8" conf="binaries->default" />
         <dependency org="com.rometools" name="rome" rev="1.15.0" conf="binaries->default" />
@@ -204,7 +207,7 @@
         <dependency org="io.cucumber" name="cucumber-java8" rev="7.0.0" conf="binaries->default" />
         <dependency org="io.cucumber" name="cucumber-junit" rev="7.0.0" conf="binaries->default" />
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.115" conf="binaries->default" />
-        <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="8.5" conf="binaries->default" />
+        <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="9.1" conf="binaries->default" />
         <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.M2" conf="binaries->default" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="binaries->default" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="binaries->default" />
