--- a/.gitlab/ci/gitlab-ci.yml
+++ b/.gitlab/ci/gitlab-ci.yml
@@ -32,6 +32,9 @@ build:
       - build/ui/cli/database/jar/database.jar
       - build/ui/cli/dataloader/jar/dataloader.jar
       - build/ui/cli/mailtransfer/jar/mailtransfer.jar
+      - build/lib/jooq.jar
+      - build/lib/jooq-codegen.jar
+      - build/lib/jooq-meta.jar
       - build/lib/mysql-connector-java.jar
       - build/lib/nekohtml.jar
       - build/lib/javax.mail.jar
