--- a/.gitlab/ci/gitlab-ci.yml
+++ b/.gitlab/ci/gitlab-ci.yml
@@ -35,6 +35,9 @@ build:
       - build/lib/jooq.jar
       - build/lib/jooq-codegen.jar
       - build/lib/jooq-meta.jar
+      - build/lib/jaxb-api.jar
+      - build/lib/r2dbc-spi.jar
+      - build/lib/reactive-streams.jar
       - build/lib/mysql-connector-java.jar
       - build/lib/nekohtml.jar
       - build/lib/javax.mail.jar
