#385: Upgraded Lucene to 9.0.0

--- a/src/build.xml
+++ b/src/build.xml
@@ -318,8 +318,8 @@
                 <include name="java-dataloader.jar"/>
                 <include name="jooq.jar"/>
                 <include name="juel-impl.jar"/>
-                <include name="lucene-analyzers-common.jar" />
-                <include name="lucene-analyzers-kuromoji.jar" />
+                <include name="lucene-analysis-common.jar" />
+                <include name="lucene-analysis-kuromoji.jar" />
                 <include name="lucene-core.jar" />
                 <include name="lucene-queryparser.jar" />
                 <include name="lucene-suggest.jar" />
