--- a/ivy.xml
+++ b/ivy.xml
@@ -35,7 +35,7 @@
         <dependency org="io.cucumber" name="cucumber-junit" rev="7.0.0" conf="sources->sources" />
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.135" conf="sources->sources" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="9.1" conf="sources->sources" />
-        <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.M2" conf="sources->sources" />
+        <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.RELEASE" conf="sources->sources" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="sources->sources" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="sources->sources" />
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="sources->sources" />
@@ -76,7 +76,7 @@
         <dependency org="org.javassist" name="javassist" rev="3.22.0-GA" conf="sources->sources" />
         <dependency org="org.jfree" name="jcommon" rev="1.0.24" conf="sources->sources" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.0" conf="sources->sources" />
-        <dependency org="org.jooq" name="jooq" rev="3.15.5" conf="sources->sources" />
+        <dependency org="org.jooq" name="jooq" rev="3.16.0" conf="sources->sources" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="sources->sources" />
         <dependency org="org.reactivestreams" name="reactive-streams" rev="1.0.3" conf="sources->sources" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.32" conf="sources->sources" />
@@ -121,7 +121,7 @@
         <dependency org="io.cucumber" name="cucumber-junit" rev="7.0.0" conf="javadoc->javadoc" />
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.135" conf="javadoc->javadoc" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="9.1" conf="javadoc->javadoc" />
-        <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.M2" conf="javadoc->javadoc" />
+        <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.RELEASE" conf="javadoc->javadoc" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="javadoc->javadoc" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="javadoc->javadoc" />
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="javadoc->javadoc" />
@@ -161,7 +161,7 @@
         <dependency org="org.javassist" name="javassist" rev="3.22.0-GA" conf="javadoc->javadoc" />
         <dependency org="org.jfree" name="jcommon" rev="1.0.24" conf="javadoc->javadoc" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.0" conf="javadoc->javadoc" />
-        <dependency org="org.jooq" name="jooq" rev="3.15.5" conf="javadoc->javadoc" />
+        <dependency org="org.jooq" name="jooq" rev="3.16.0" conf="javadoc->javadoc" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="javadoc->javadoc" />
         <dependency org="org.reactivestreams" name="reactive-streams" rev="1.0.3" conf="javadoc->javadoc" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.32" conf="javadoc->javadoc" />
@@ -208,7 +208,7 @@
         <dependency org="io.cucumber" name="cucumber-junit" rev="7.0.0" conf="binaries->default" />
         <dependency org="io.github.classgraph" name="classgraph" rev="4.8.135" conf="binaries->default" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="9.1" conf="binaries->default" />
-        <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.M2" conf="binaries->default" />
+        <dependency org="io.r2dbc" name="r2dbc-spi" rev="0.9.0.RELEASE" conf="binaries->default" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="binaries->default" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="binaries->default" />
         <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="binaries->default" />
@@ -255,7 +255,7 @@
         <dependency org="org.javassist" name="javassist" rev="3.22.0-GA" conf="binaries->default" />
         <dependency org="org.jfree" name="jcommon" rev="1.0.24" conf="binaries->default" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.0" conf="binaries->default" />
-        <dependency org="org.jooq" name="jooq" rev="3.15.5" conf="binaries->default" />
+        <dependency org="org.jooq" name="jooq" rev="3.16.0" conf="binaries->default" />
         <dependency org="org.osgi" name="org.osgi.service.component.annotations" rev="1.4.0" conf="binaries->default" />
         <dependency org="org.reactivestreams" name="reactive-streams" rev="1.0.3" conf="binaries->default" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.32" conf="binaries->default" />
