--- a/ivy.xml
+++ b/ivy.xml
@@ -80,12 +80,12 @@
         <dependency org="org.reactivestreams" name="reactive-streams" rev="1.0.3" conf="sources->sources" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.32" conf="sources->sources" />
         <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.32" conf="sources->sources" />
-        <dependency org="org.springframework" name="spring-beans" rev="5.2.9.RELEASE" conf="sources->sources" />
-        <dependency org="org.springframework" name="spring-context" rev="5.2.9.RELEASE" conf="sources->sources" />
-        <dependency org="org.springframework" name="spring-core" rev="5.2.9.RELEASE" conf="sources->sources" />
-        <dependency org="org.springframework" name="spring-expression" rev="5.2.9.RELEASE" conf="sources->sources" />
+        <dependency org="org.springframework" name="spring-beans" rev="5.3.18" conf="sources->sources" />
+        <dependency org="org.springframework" name="spring-context" rev="5.3.18" conf="sources->sources" />
+        <dependency org="org.springframework" name="spring-core" rev="5.3.18" conf="sources->sources" />
+        <dependency org="org.springframework" name="spring-expression" rev="5.3.18" conf="sources->sources" />
         <dependency org="org.springframework" name="spring-struts" rev="3.2.18.RELEASE" conf="sources->sources" />
-        <dependency org="org.springframework" name="spring-web" rev="5.2.9.RELEASE" conf="sources->sources" />
+        <dependency org="org.springframework" name="spring-web" rev="5.3.18" conf="sources->sources" />
         <dependency org="org.threeten" name="threeten-extra" rev="1.5.0" conf="sources->sources" />
         <dependency org="org.wildfly" name="wildfly-client-all" rev="26.0.1.Final" conf="sources->sources" />
         <dependency org="xalan" name="xalan" rev="2.7.2" conf="sources->sources" />
@@ -164,12 +164,12 @@
         <dependency org="org.reactivestreams" name="reactive-streams" rev="1.0.3" conf="javadoc->javadoc" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.32" conf="javadoc->javadoc" />
         <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.32" conf="javadoc->javadoc" />
-        <dependency org="org.springframework" name="spring-beans" rev="5.2.9.RELEASE" conf="javadoc->javadoc" />
-        <dependency org="org.springframework" name="spring-context" rev="5.2.9.RELEASE" conf="javadoc->javadoc" />
-        <dependency org="org.springframework" name="spring-core" rev="5.2.9.RELEASE" conf="javadoc->javadoc" />
-        <dependency org="org.springframework" name="spring-expression" rev="5.2.9.RELEASE" conf="javadoc->javadoc" />
+        <dependency org="org.springframework" name="spring-beans" rev="5.3.18" conf="javadoc->javadoc" />
+        <dependency org="org.springframework" name="spring-context" rev="5.3.18" conf="javadoc->javadoc" />
+        <dependency org="org.springframework" name="spring-core" rev="5.3.18" conf="javadoc->javadoc" />
+        <dependency org="org.springframework" name="spring-expression" rev="5.3.18" conf="javadoc->javadoc" />
         <dependency org="org.springframework" name="spring-struts" rev="3.2.18.RELEASE" conf="javadoc->javadoc" />
-        <dependency org="org.springframework" name="spring-web" rev="5.2.9.RELEASE" conf="javadoc->javadoc" />
+        <dependency org="org.springframework" name="spring-web" rev="5.3.18" conf="javadoc->javadoc" />
         <dependency org="org.threeten" name="threeten-extra" rev="1.5.0" conf="javadoc->javadoc" />
         <dependency org="org.wildfly" name="wildfly-client-all" rev="26.0.1.Final" conf="javadoc->javadoc" />
         <dependency org="xalan" name="xalan" rev="2.7.2" conf="javadoc->javadoc" />
@@ -257,12 +257,12 @@
         <dependency org="org.reactivestreams" name="reactive-streams" rev="1.0.3" conf="binaries->default" />
         <dependency org="org.slf4j" name="slf4j-api" rev="1.7.32" conf="binaries->default" />
         <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.32" conf="binaries->default" />
-        <dependency org="org.springframework" name="spring-beans" rev="5.2.9.RELEASE" conf="binaries->default" />
-        <dependency org="org.springframework" name="spring-context" rev="5.2.9.RELEASE" conf="binaries->default" />
-        <dependency org="org.springframework" name="spring-core" rev="5.2.9.RELEASE" conf="binaries->default" />
-        <dependency org="org.springframework" name="spring-expression" rev="5.2.9.RELEASE" conf="binaries->default" />
+        <dependency org="org.springframework" name="spring-beans" rev="5.3.18" conf="binaries->default" />
+        <dependency org="org.springframework" name="spring-context" rev="5.3.18" conf="binaries->default" />
+        <dependency org="org.springframework" name="spring-core" rev="5.3.18" conf="binaries->default" />
+        <dependency org="org.springframework" name="spring-expression" rev="5.3.18" conf="binaries->default" />
         <dependency org="org.springframework" name="spring-struts" rev="3.2.18.RELEASE" conf="binaries->default" />
-        <dependency org="org.springframework" name="spring-web" rev="5.2.9.RELEASE" conf="binaries->default" />
+        <dependency org="org.springframework" name="spring-web" rev="5.3.18" conf="binaries->default" />
         <dependency org="org.threeten" name="threeten-extra" rev="1.5.0" conf="binaries->default" />
         <dependency org="org.wildfly" name="wildfly-client-all" rev="26.0.1.Final" conf="binaries->default" />
         <dependency org="xalan" name="xalan" rev="2.7.2" conf="binaries->default" />
