#324: Added pronouns to Profiles

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -393,6 +393,7 @@ label.employeeType=Employee Type
 label.nickname=Nickname
 label.icon=Icon
 label.gender=Gender
+label.pronouns=Pronouns
 label.mood=Mood
 label.birthday=Birthday
 label.birthdayFormat=Birthday Format
