#325: Added pronunciation to Profiles

--- a/ui/web/main/src/metadata/MainMessageResources.properties
+++ b/ui/web/main/src/metadata/MainMessageResources.properties
@@ -394,6 +394,7 @@ label.nickname=Nickname
 label.icon=Icon
 label.gender=Gender
 label.pronouns=Pronouns
+label.pronunciation=Pronunciation
 label.mood=Mood
 label.birthday=Birthday
 label.birthdayFormat=Birthday Format
